# SQL-QA-Agent

./: .gitignore  README.md  pyproject.toml
examples/: sql-policy.yaml
examples/sample_repo/: example.py  example.sql
sqlqa/: __init__.py  baseline.py  cli.py  config.py  dynamic_runner.py  extractor.py  graph.py  models.py  optimizer.py  reporter.py  static_rules.py
tests/: test_baseline.py  test_dynamic_runner.py  test_extractor.py  test_graph.py  test_optimizer.py  test_static_rules.py
